
AC_PREREQ([2.68])
AC_INIT([bralloc], [0.1], [jan.steemann@googlemail.com], [bralloc], [https://github.com/jsteemann/bralloc])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([bralloc.c])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([malloc.h stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
